--- a/campfire-rules-nz.html
+++ b/campfire-rules-nz.html
@@ -57,15 +57,15 @@
     <main class="article-main container">
       <article class="guide-article">
 
-                <figure class="article-hero">
-        <img src="images/campfire-rules-nz-hero.webp" alt="Fire Rules, Bans, and Safe Cooking Outdoors hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
-      </figure>
-
 <header class="guide-header">
             
             <h1>Fire Rules, Bans, and Safe Cooking Outdoors</h1>
-            <p class="lede">Avoid fines and wildfire risk by understanding New Zealand’s fire seasons, permit system, and safe cooking alternatives.</p>
+            <p class="lede">Avoid fines and wildfire risk by understanding New Zealand's fire seasons, permit system, and safe cooking alternatives.</p>
           </header>
+
+                <figure class="article-hero">
+        <img src="images/campfire-rules-nz-hero.webp" alt="Fire Rules, Bans, and Safe Cooking Outdoors hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
+      </figure>
 
           <div class="definition-box" role="note">
             <p><strong>Remember:</strong> Fire seasons and permits are managed by Fire and Emergency New Zealand (FENZ). Use <a href="https://www.checkitsalright.nz" target="_blank" rel="noopener">checkitsalright.nz</a> to see current restrictions. On DOC land, fires are only allowed where specifically permitted. Often not at all in summer.</p></div>
