--- a/dump-stations-nz.html
+++ b/dump-stations-nz.html
@@ -57,15 +57,15 @@
     <main class="article-main container">
       <article class="guide-article">
 
-                <figure class="article-hero">
-        <img src="images/dump-stations-nz-hero.webp" alt="Dump Stations and Waste Etiquette for Campers hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
-      </figure>
-
 <header class="guide-header">
             
             <h1>Dump Stations and Waste Etiquette for Campers</h1>
-            <p class="lede">Locate New Zealand’s dump stations, empty your tanks without causing spills, and avoid fines with this comprehensive etiquette guide.</p>
+            <p class="lede">Locate New Zealand's dump stations, empty your tanks without causing spills, and avoid fines with this comprehensive etiquette guide.</p>
           </header>
+
+                <figure class="article-hero">
+        <img src="images/dump-stations-nz-hero.webp" alt="Dump Stations and Waste Etiquette for Campers hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
+      </figure>
 
           <div class="definition-box" role="note">
             <p><strong>Key takeaway:</strong> Always use official dump stations listed in KiwiCamping, carry the right hoses, and rinse pads to keep councils confident in freedom camping access.</p>
