--- a/self-contained-vehicles-nz.html
+++ b/self-contained-vehicles-nz.html
@@ -57,15 +57,15 @@
     <main class="article-main container">
       <article class="guide-article">
 
-                <figure class="article-hero">
-        <img src="images/self-contained-vehicles-nz-hero.webp" alt="Self-Contained Vehicles in NZ, What It Really Requires hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
-      </figure>
-
 <header class="guide-header">
             
             <h1>Self-Contained Vehicles in NZ, What It Really Requires</h1>
-            <p class="lede">Everything you need to pass New Zealand’s updated self-containment certification, from fixed toilets and venting to inspection paperwork.</p>
+            <p class="lede">Everything you need to pass New Zealand's updated self-containment certification, from fixed toilets and venting to inspection paperwork.</p>
           </header>
+
+                <figure class="article-hero">
+        <img src="images/self-contained-vehicles-nz-hero.webp" alt="Self-Contained Vehicles in NZ, What It Really Requires hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
+      </figure>
 
           <div class="definition-box" role="note">
             <p><strong>Self-contained vehicle definition:</strong> A vehicle that meets current NZ self-containment requirements, including a <strong>fixed toilet</strong>, plumbed fresh and waste water systems, venting, and waste containment sufficient to support occupants for at least three days without discharging waste.</p>
