--- a/responsible-camping-nz.html
+++ b/responsible-camping-nz.html
@@ -57,15 +57,15 @@
     <main class="article-main container">
       <article class="guide-article">
 
-                <figure class="article-hero">
-        <img src="images/responsible-camping-nz-hero.webp" alt="Responsible Camping in NZ, Leave No Trace Applied Locally hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
-      </figure>
-
 <header class="guide-header">
             
             <h1>Responsible Camping in NZ, Leave No Trace Applied Locally</h1>
-            <p class="lede">Protect Aotearoa’s environment, respect mana whenua, and keep freedom camping privileges alive by following these locally adapted Leave No Trace principles.</p>
+            <p class="lede">Protect Aotearoa's environment, respect mana whenua, and keep freedom camping privileges alive by following these locally adapted Leave No Trace principles.</p>
           </header>
+
+                <figure class="article-hero">
+        <img src="images/responsible-camping-nz-hero.webp" alt="Responsible Camping in NZ, Leave No Trace Applied Locally hero image placeholder" loading="eager" fetchpriority="high" decoding="async" />
+      </figure>
 
           <div class="download-banner">
             <p>Add this code of conduct to your KiwiCamping trip plan so every driver in your convoy stays aligned.</p>
