Refactor campsite and booking guides by removing unnecessary links for clarity. Update CSS for mobile image responsiveness and delete unused image files to optimize storage. Adjusted text for improved readability across multiple articles.

--- a/top-scenic-campsites-nz.html
+++ b/top-scenic-campsites-nz.html
@@ -90,35 +90,35 @@
 
           <h2>Northland to Wellington picks</h2>
           <ol class="scenic-list">
-            <li><a href="https://campingapp.nz/link/site/doc-spirits-bay" target="_blank" rel="noopener">Spirits Bay / Kapowairua DOC Campsite</a> – far north sunrise views.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-tapai-bay" target="_blank" rel="noopener">Tapotupotu Bay DOC Campsite</a> – surf and Te Paki access.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-urupukapuka" target="_blank" rel="noopener">Urupukapuka Bay Campsite</a> – Bay of Islands island escape.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-matakana-island" target="_blank" rel="noopener">Matakana Island Freedom Site</a> – council-managed with golden sand.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-hoteo-bay" target="_blank" rel="noopener">Opito Bay DOC Campsite</a> – Coromandel stargazing.</li>
-            <li><a href="https://campingapp.nz/link/site/private-hot-water-beach-top10" target="_blank" rel="noopener">Hot Water Beach TOP 10</a> – geothermal beach minutes away.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-lake-taupo-motuopa" target="_blank" rel="noopener">Motuopa Bay Lakeside Reserve</a> – Taupō lakefront sunsets.</li>
-            <li><a href="https://campingapp.nz/link/site/council-hawkes-bay-mohaka" target="_blank" rel="noopener">Mohaka River Freedom Site</a> – fly-fishing base.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-tarankai-kai-iwi" target="_blank" rel="noopener">Kai Iwi Lakes Campground</a> – freshwater clarity.</li>
-            <li><a href="https://campingapp.nz/link/site/council-capital-coast-evans-bay" target="_blank" rel="noopener">Evans Bay Motorhome Park</a> – Wellington harbour outlook.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-mt-holdsworth" target="_blank" rel="noopener">Mt Holdsworth DOC Campsite</a> – Tararua foothills.</li>
-            <li><a href="https://campingapp.nz/link/site/council-new-plymouth-belts" target="_blank" rel="noopener">Belt Road Seaside Holiday Park</a> – Taranaki surf vista.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-tolaga-bay" target="_blank" rel="noopener">Tolaga Bay Holiday Park</a> – East Coast pier and sunrise.</li>
+            <li>Spirits Bay / Kapowairua DOC Campsite – far north sunrise views.</li>
+            <li>Tapotupotu Bay DOC Campsite – surf and Te Paki access.</li>
+            <li>Urupukapuka Bay Campsite – Bay of Islands island escape.</li>
+            <li>Matakana Island Freedom Site – council-managed with golden sand.</li>
+            <li>Opito Bay DOC Campsite – Coromandel stargazing.</li>
+            <li>Hot Water Beach TOP 10 – geothermal beach minutes away.</li>
+            <li>Motuopa Bay Lakeside Reserve – Taupō lakefront sunsets.</li>
+            <li>Mohaka River Freedom Site – fly-fishing base.</li>
+            <li>Kai Iwi Lakes Campground – freshwater clarity.</li>
+            <li>Evans Bay Motorhome Park – Wellington harbour outlook.</li>
+            <li>Mt Holdsworth DOC Campsite – Tararua foothills.</li>
+            <li>Belt Road Seaside Holiday Park – Taranaki surf vista.</li>
+            <li>Tolaga Bay Holiday Park – East Coast pier and sunrise.</li>
           </ol>
 
           <h2>Nelson to Southland picks</h2>
           <ol class="scenic-list">
-            <li><a href="https://campingapp.nz/link/site/doc-totaranui" target="_blank" rel="noopener">Totaranui Campground</a> – Abel Tasman turquoise bay.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-tatare-gorge" target="_blank" rel="noopener">Lyell DOC Campsite</a> – Buller Gorge history.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-curio-bay" target="_blank" rel="noopener">Curio Bay Campground</a> – petrified forest and Hector’s dolphins.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-lake-pukaki" target="_blank" rel="noopener">Lake Pukaki Reserve</a> – Aoraki panoramic views.</li>
-            <li><a href="https://campingapp.nz/link/site/private-tekapo-holiday-park" target="_blank" rel="noopener">Lake Tekapo Holiday Park</a> – dark sky sanctuary skycapes.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-moke-lake" target="_blank" rel="noopener">Moke Lake DOC Campsite</a> – mirror lakes near Queenstown.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-gillespies-beach" target="_blank" rel="noopener">Gillespies Beach DOC Campsite</a> – West Coast sunsets.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-lake-paringa" target="_blank" rel="noopener">Lake Paringa DOC Campsite</a> – tranquil forest reflections.</li>
-            <li><a href="https://campingapp.nz/link/site/private-wanaka-lakeview" target="_blank" rel="noopener">Wanaka Lakeview Holiday Park</a> – central base with mountain backdrop.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-knobs-flat" target="_blank" rel="noopener">Knobs Flat Campsite</a> – Fiordland valley views.</li>
-            <li><a href="https://campingapp.nz/link/site/doc-monowai" target="_blank" rel="noopener">Monowai Campsite</a> – quiet Southland lake.</li>
-            <li><a href="https://campingapp.nz/link/site/private-stewart-island-glamping" target="_blank" rel="noopener">Oban Campground (Stewart Island)</a> – island glowworms.</li>
+            <li>Totaranui Campground – Abel Tasman turquoise bay.</li>
+            <li>Lyell DOC Campsite – Buller Gorge history.</li>
+            <li>Curio Bay Campground – petrified forest and Hector's dolphins.</li>
+            <li>Lake Pukaki Reserve – Aoraki panoramic views.</li>
+            <li>Lake Tekapo Holiday Park – dark sky sanctuary skycapes.</li>
+            <li>Moke Lake DOC Campsite – mirror lakes near Queenstown.</li>
+            <li>Gillespies Beach DOC Campsite – West Coast sunsets.</li>
+            <li>Lake Paringa DOC Campsite – tranquil forest reflections.</li>
+            <li>Wanaka Lakeview Holiday Park – central base with mountain backdrop.</li>
+            <li>Knobs Flat Campsite – Fiordland valley views.</li>
+            <li>Monowai Campsite – quiet Southland lake.</li>
+            <li>Oban Campground (Stewart Island) – island glowworms.</li>
           </ol>
 
           <h2>Access notes, amenities, booking status</h2>
@@ -157,11 +157,11 @@
             "name": "Top 25 scenic campsites in New Zealand",
             "itemListOrder": "http://schema.org/ItemListOrderAscending",
             "itemListElement": [
-              {"@type": "ListItem", "position": 1, "name": "Spirits Bay / Kapowairua DOC Campsite", "url": "https://campingapp.nz/link/site/doc-spirits-bay"},
-              {"@type": "ListItem", "position": 2, "name": "Tapotupotu Bay DOC Campsite", "url": "https://campingapp.nz/link/site/doc-tapai-bay"},
-              {"@type": "ListItem", "position": 3, "name": "Urupukapuka Bay Campsite", "url": "https://campingapp.nz/link/site/doc-urupukapuka"},
-              {"@type": "ListItem", "position": 4, "name": "Opito Bay DOC Campsite", "url": "https://campingapp.nz/link/site/doc-hoteo-bay"},
-              {"@type": "ListItem", "position": 5, "name": "Curio Bay Campground", "url": "https://campingapp.nz/link/site/doc-curio-bay"}
+              {"@type": "ListItem", "position": 1, "name": "Spirits Bay / Kapowairua DOC Campsite"},
+              {"@type": "ListItem", "position": 2, "name": "Tapotupotu Bay DOC Campsite"},
+              {"@type": "ListItem", "position": 3, "name": "Urupukapuka Bay Campsite"},
+              {"@type": "ListItem", "position": 4, "name": "Opito Bay DOC Campsite"},
+              {"@type": "ListItem", "position": 5, "name": "Curio Bay Campground"}
             ]
           }
           </script>
