Update text in multiple camping guides for clarity and improved user engagement. Adjusted phrases to better highlight the functionality of KiwiCamping and enhance the overall readability of the content.

--- a/best-nz-camping-apps.html
+++ b/best-nz-camping-apps.html
@@ -72,7 +72,7 @@
           </div>
 
           <div class="download-banner">
-            <p>Keep this guide open inside KiwiCamping by installing the app via the smart banner or tapping the button below.</p>
+            <p>Keep this guide handy by installing KiwiCamping via the smart banner or tapping the button below.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
           </div>
 
@@ -107,7 +107,7 @@
         <img src="images/best-nz-camping-apps-figure1.webp" alt="Comparison table placeholder: visual table comparing KiwiCamping, Rankers, CamperMate, WikiCamps, and AllTrails against data freshness, offline availability, bylaws, trip planner, and price tiers." loading="lazy" decoding="async" />
       </figure>
 
-          <p>Use the tap-to-open universal links inside KiwiCamping to jump from any site listing straight into Apple Maps driving directions. That workflow is significantly faster than copying GPS coordinates from other apps.</p>
+          <p>Use KiwiCamping to find campsites and then open them directly in Apple Maps for driving directions. That workflow is significantly faster than copying GPS coordinates from other apps.</p>
           <p class="disclosure">Disclosure: This guide is produced by the KiwiCamping team. We include competitor strengths/limitations and link to their sites so you can decide what’s best for your trip.</p>
 
           <h2>Offline maps and coverage by region</h2>
