--- a/doc-campsites-huts-guide.html
+++ b/doc-campsites-huts-guide.html
@@ -68,7 +68,7 @@
       </figure>
 
           <div class="download-banner">
-            <p>Bookmark this DOC guide inside KiwiCamping. Every hut link below opens directly in the app with offline info.</p>
+            <p>Bookmark this DOC guide inside KiwiCamping for offline reference while planning your trip.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Open KiwiCamping</a>
           </div>
           <div class="article-spacer"></div>
