--- a/freedom-camping-rules-nz.html
+++ b/freedom-camping-rules-nz.html
@@ -140,7 +140,7 @@
           <p class="internal-links">Related reading: <a href="best-nz-camping-apps.html">Best Camping Apps</a> ↗ · <a href="holiday-parks-nz-booking-guide.html">Holiday park booking guide</a> ↗ · <a href="self-contained-vehicles-nz.html">Self-contained vehicle requirements</a> ↗</p>
 
           <div class="download-banner">
-            <p>Keep compliant on every leg. Open this site in KiwiCamping, download the regional cheat sheet, and let the app navigate you to legal overnight stops.</p>
+            <p>Keep compliant on every leg. Use KiwiCamping to find legal overnight stops and check regional regulations.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
           </div>
           <div class="article-spacer"></div>
