--- a/holiday-parks-nz-booking-guide.html
+++ b/holiday-parks-nz-booking-guide.html
@@ -102,7 +102,7 @@
           <h2>How to book online with partners</h2>
           <p>Follow this sequence to secure a site without phone calls:</p>
           <ol class="howto-steps">
-            <li>Open the park in KiwiCamping and tap the booking link (e.g. TOP 10 or BookIt).</li>
+            <li>Find the park in KiwiCamping and use the booking information provided (e.g. TOP 10 or BookIt).</li>
             <li>Select your travel dates, number of adults/children, and vehicle details. Many booking engines ask for length and height. Measure accurately.</li>
             <li>Add extras like linen hire, Wi-Fi passes, or dog fees. Confirm whether the price includes dump station use.</li>
             <li>Pay the deposit (usually 10–25%) or the full rate. Save the confirmation PDF to your trip or share it with your group so everyone sees it offline.</li>
