--- a/top-scenic-campsites-nz.html
+++ b/top-scenic-campsites-nz.html
@@ -68,10 +68,10 @@
       </figure>
 
           <div class="definition-box" role="note">
-            <p><strong>Tip:</strong> Tap any campsite below to launch the universal link in KiwiCamping and save it to your trip planner.</p></div>
+            <p><strong>Tip:</strong> Use KiwiCamping to find these campsites and add them to your trip planner.</p></div>
 
           <div class="download-banner">
-            <p>Install KiwiCamping so these universal links open instantly and work offline.</p>
+            <p>Install KiwiCamping to find these campsites and plan your route offline.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Download KiwiCamping</a>
           </div>
 
