--- a/two-week-camper-itinerary-nz.html
+++ b/two-week-camper-itinerary-nz.html
@@ -133,7 +133,7 @@
               <dt>How long are the driving days?</dt>
               <dd>Most legs stay under 4 hours, except Wellington–Picton ferry day. Use KiwiCamping trip times to manage fatigue.</dd>
               <dt>What if the ferry sells out?</dt>
-              <dd>Book early and keep alternative dates open. Interislander and Bluebridge links are stored in KiwiCamping for quick access.</dd>
+              <dd>Book early and keep alternative dates open. Ferry booking information is available in KiwiCamping for quick reference.</dd>
             </dl>
           </div>
           <p class="internal-links">Related reading: <a href="best-nz-camping-apps.html">Best camping apps</a> ↗ · <a href="holiday-parks-nz-booking-guide.html">Holiday park booking guide</a> ↗ · <a href="top-scenic-campsites-nz.html">Top scenic campsites</a> ↗</p>
