--- a/where-to-camp-in-new-zealand.html
+++ b/where-to-camp-in-new-zealand.html
@@ -68,7 +68,7 @@
       </figure>
 
           <div class="download-banner">
-            <p>Open each location in KiwiCamping with one tap. The universal links below launch straight into the app.</p>
+            <p>Use KiwiCamping to find and save these locations for your trip planning.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Launch KiwiCamping</a>
           </div>
 
