--- a/freedom-camping-rules-nz.html
+++ b/freedom-camping-rules-nz.html
@@ -78,7 +78,7 @@
 
           <h2>What freedom camping means in NZ context</h2>
           <p>Freedom camping lets travellers stay overnight in certain public places without paying a campsite fee. In New Zealand that privilege comes with obligations: you must comply with the Freedom Camping Act 2011, respect local bylaws, and leave no trace. The term covers parking in lay-bys, lakeside reserves, or council-designated car parks, not private farmland or national park huts.</p>
-          <p>KiwiCamping tags every legal spot and pairs it with the relevant rule excerpt so you can prove compliance. Tap the site card, scroll to “Council Source,” and follow the PDF or map overlay before setting up for the night.</p>
+          <p>KiwiCamping tags every legal spot and pairs it with the relevant rule excerpt so you can prove compliance. Check the site details, scroll to "Council Source," and follow the PDF or map overlay before setting up for the night.</p>
 
           <h2>Key law changes (2023–2026)</h2>
           <ul>
