--- a/best-nz-camping-apps.html
+++ b/best-nz-camping-apps.html
@@ -137,7 +137,7 @@
           </ul>
 
           <div class="download-banner">
-            <p>Ready to road test the winner? Tap below or simply use the smart banner at the top of this page to open KiwiCamping on your device.</p>
+            <p>Ready to road test the winner? Download KiwiCamping below or simply use the smart banner at the top of this page.</p>
             <a class="btn" href="https://apps.apple.com/us/app/nz-camping-map-kiwicamping/id6746952595" target="_blank" rel="noopener">Open KiwiCamping</a>
           </div>
           <div class="article-spacer"></div>
